smaller rounded corners, better tip design, fix sub menu spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,6 +39,7 @@
   --ifm-alert-padding-horizontal:20px;
   --docusaurus-highlighted-code-line-bg:#f2f2f2;
   --ifm-navbar-height:4.25rem;
+  --dave-custom-border-radius:14px;
 /*  --ifm-hover-overlay:white;*/
 }
 
@@ -79,10 +80,10 @@ p > a:hover{
 }
 
 img {
-  border-radius: 24px;
+  border-radius: var(--dave-custom-border-radius);
 }
 video {
-  border-radius: 24px;
+  border-radius: var(--dave-custom-border-radius);
   margin-bottom: 15px;
 }
 
@@ -202,7 +203,7 @@ body {
 
 .menu__list {
   margin-top: 5px;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 }
 
 .menu__list .menu__list {
@@ -223,7 +224,7 @@ body {
 }
 
 .menu__list-item-collapsible .menu__link {
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 700;
   margin-top: 15px;
 }
@@ -257,10 +258,11 @@ body {
 }
 
 .theme-doc-sidebar-item-category-level-2 > .menu__list-item-collapsible > .menu__link {
-    font-size: .95em;
+    font-size: .75em;
     line-height: 1.4;
-    font-weight: 400;
+    font-weight: 600;
     color:#7d7d7d;
+    margin-top: 10px;
 }
 
 .theme-doc-sidebar-item-category-level-2 .menu__list-item {
@@ -268,6 +270,11 @@ body {
     line-height: 1.4;
     font-weight: 400;
 }
+.theme-doc-sidebar-item-category-level-2 > .menu__list{
+    margin-bottom: 5px;
+}
+
+
 
 .DocSearch-Button {
   min-width: 250px;
@@ -346,7 +353,7 @@ body {
 /*  border:none;
   padding-left: 0;
   padding-right: 0;*/
-  border-radius: 24px;
+  border-radius: var(--dave-custom-border-radius);
 }
 
 .theme-edit-this-page {
@@ -435,12 +442,12 @@ body {
 
 
 div [class*="codeBlockContainer"] {
-  border-radius:24px !important;
+  border-radius:var(--dave-custom-border-radius)!important;
 }
 
 
 pre {
-  border-radius: 24px !important;
+  border-radius: var(--dave-custom-border-radius)!important;
 
 }
 
@@ -471,6 +478,74 @@ div:has(> .theme-doc-toc-desktop ) {
 
 .alert a {
   text-decoration: none;
+}
+
+.alert {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    border-width: 1px;
+    box-shadow: none;
+    border-radius: 0.75rem;
+    overflow: hidden;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.alert--success {
+/*    background-color: hsla(0,0%,98%,.5);
+    border-color: hsla(240,4%,46%,.2);*/
+
+    background-color: rgba(236,253,245,.5);
+    border-color: rgba(16,185,129,.2);
+    color:rgb(6, 78, 59);
+}
+
+.alert--success svg {
+  color: rgb(5, 150, 105);
+  fill: rgb(5, 150, 105) !important;
+}
+
+.alert--info {
+    background-color: hsla(0,0%,98%,.5);
+    border-color: hsla(240,4%,46%,.2);
+    color:rgb(6, 78, 59);
+}
+
+.alert--danger {
+  background-color: hsla(0,93%,94%,.5);
+  border-color: rgba(220, 38, 38,0.15);
+  color: rgb(220, 38, 38);
+}
+
+.alert--danger  svg {
+  color: rgba(220, 38, 38,1);
+  fill: rgba(220, 38, 38,1) !important;
+}
+
+[class*="admonitionIcon"] {
+/*    height: 30px;
+    width: 30px;*/
+    font-size: .875rem;
+    line-height: 1.8;
+}
+
+[class*="admonitionIcon"] svg {
+    height: 1.4em !important;
+    width: 1.7em !important;
+    /* padding-top: 3px; */
+    margin-bottom: -5px;
+    margin-right: 5px;
+
+}
+
+[class*="admonitionHeading"] {
+  font-size: 0 !important;
+}
+
+.theme-admonition-tip, .theme-admonition-info, .theme-admonition-note, .theme-admonition-danger {
+  display: flex;
 }
 
 .menu__link--sublist-caret:after {
